--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "classlist.js": "^1.1.20150312",
     "rxjs": "~6.5.4",
     "semantic-ui-css": "^2.4.1",
     "tslib": "^1.10.0",
